# agent-project

./: .gitignore  1.3_研究内容与研究方法.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README完善总结.md  arduino_code.ino  benchmark_mcp.py  check_system.py  package-lock.json  start.bat  start.sh  test_integration.py  test_mcp.py  提示词.md  系统总体设计.md
.trae/documents/: Draft Paper for Smart Agriculture MCP System.md  Switch to LLM-Driven Irrigation Analysis.md  优化输出格式以生成专业的智能农业决策报告.md  修复 gemma3_4b 工具调用报错并切换至稳定的 qwen2.5-coder 模型.md  修正 SYSTEM_PROMPT 以允许执行关闭水泵指令.md  修正土壤湿度为0%时的错误灌溉建议逻辑.md  切换 AI 模型为 gemma3_4b 以执行智能灌溉决策.md  无法直接读取 PNG 图片内容.md  构建智能灌溉 MCP 系统方案.md  配置 MCP 客户端集成四项服务并添加水泵控制的安全确认机制.md  项目初始化与启动指南.md
client/mcp-client/: .env.example  README.md  README_FIXES.md  _tmp_verify_irrigation_fallback.py  client.py  mcp_servers.json  prompts.py  pyproject.toml  quick_test.bat  test_connection.py  test_potato.py  使用说明.md
docs/: 快速启动指南.md  感知层数据获取诊断.md  环境配置指南.md  项目问题检查报告.md
file/: browser_use_server_explanation.md  client_code_introduction.md  文档.md
server/browser-use-mcp-server-main/: .env.example
server/crop_knowledge/: knowledge.py  pyproject.toml
server/decision/: decision.py  pyproject.toml
server/filesystem/: filesystem.py  pyproject.toml
server/irrigation/: config.yaml  irrigation.py  irrigation_old.py  main.py  pyproject.toml
server/irrigation/actuators/: pump.py  valve.py
server/irrigation/tools/: get_status.py  start_irrigation.py  stop_irrigation.py
server/sensor/: pyproject.toml  (+2 more)
server/web/: app.py  pyproject.toml
server/web/static/: index.html
(+9 files in other folders)
