[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "anthropic>=0.49.0",
    "fastapi>=0.115.12",
    "google-genai>=1.10.0",
    "google-generativeai>=0.8.4",
    "mcp>=1.6.0",
    "openai>=1.72.0",
    "python-dotenv>=1.1.0",
]
